[workspace]
members = [
    "crates/api_server",
    "crates/cli",
    "crates/demo",
    "crates/dt_core",
    "crates/dt_database",
    "crates/dt_graph",
    "crates/dt_i18n",
    "crates/dt_parser",
    "crates/dt_path_resolver",
    "crates/dt_portable",
    "crates/dt_route",
    "crates/dt_scheduler",
    "crates/dt_test_utils",
    "crates/dt_tracker",
]
resolver = "2"

[workspace.dependencies]
anyhow          = "1.0.89"
serde           = { version = "1.0", features = ["derive"] }
serde_json      = "1.0"
swc_core        = { version = "0.104.2", features = ["common", "ecma_ast", "ecma_visit", "ecma_plugin_transform"] }
swc_ecma_parser = { version = "0.150.0", features = ["typescript"] }
clap            = { version = "4.5", features = ["derive"] }
rusqlite        = { version = "0.32.1", features = ["bundled"] }
