[package]
authors     = ["Leo Lin <wtlin1228@gmail.com>"]
description = "CLI"
edition     = "2021"
name        = "cli"
version     = "0.1.0"


[dependencies]
anyhow     = { workspace = true }
clap       = { workspace = true }
serde_json = { workspace = true }

dt_core = { version = "0.1.0", path = "../dt_core" }