[package]
authors     = ["Leo Lin <wtlin1228@gmail.com>"]
description = "demo and show how to use dependency tracker"
edition     = "2021"
name        = "demo"
version     = "0.1.0"


[dependencies]
anyhow    = { workspace = true }
clap      = { workspace = true }
indicatif = { workspace = true }

umya-spreadsheet = "1.2.3"
dialoguer        = { version = "0.11.0", features = ["history"] }
console          = "0.15.8"
rand             = "0.8.5"

dt_core = { version = "0.1.0", path = "../dt_core" }