[package]
authors     = ["Leo Lin <wtlin1228@gmail.com>"]
description = "reexport dt crates"
edition     = "2021"
name        = "dt_core"
version     = "0.1.0"


[dependencies]
dt_database      = { version = "0.1.0", path = "../dt_database" }
dt_graph         = { version = "0.1.0", path = "../dt_graph" }
dt_i18n          = { version = "0.1.0", path = "../dt_i18n" }
dt_parser        = { version = "0.1.0", path = "../dt_parser" }
dt_path_resolver = { version = "0.1.0", path = "../dt_path_resolver" }
dt_portable      = { version = "0.1.0", path = "../dt_portable" }
dt_route         = { version = "0.1.0", path = "../dt_route" }
dt_scheduler     = { version = "0.1.0", path = "../dt_scheduler" }
dt_tracker       = { version = "0.1.0", path = "../dt_tracker" }
