[package]
authors     = ["Leo Lin <wtlin1228@gmail.com>"]
description = "find the usages of i18n keys"
edition     = "2021"
name        = "dt_i18n"
version     = "0.1.0"


[dependencies]
anyhow          = { workspace = true }
swc_core        = { workspace = true }
swc_ecma_parser = { workspace = true }

dt_parser = { version = "0.1.0", path = "../dt_parser" }

[dev-dependencies]
dt_test_utils = { version = "0.1.0", path = "../dt_test_utils" }