[package]
authors     = ["Leo Lin <wtlin1228@gmail.com>"]
description = "schedule the parsing order based on module dependency"
edition     = "2021"
name        = "dt_scheduler"
version     = "0.1.0"


[dependencies]
anyhow          = { workspace = true }
swc_core        = { workspace = true }
swc_ecma_parser = { workspace = true }

dt_path_resolver = { version = "0.1.0", path = "../dt_path_resolver" }
