[package]
authors     = ["Leo Lin <wtlin1228@gmail.com>"]
description = "track the dependency of given symbol by traversing used-by graph"
edition     = "2021"
name        = "dt_tracker"
version     = "0.1.0"


[dependencies]
anyhow          = { workspace = true }
swc_core        = { workspace = true }
swc_ecma_parser = { workspace = true }

dt_graph  = { version = "0.1.0", path = "../dt_graph" }
dt_parser = { version = "0.1.0", path = "../dt_parser" }


[dev-dependencies]